fix: pricing buttons alignment

--- a/sass/pricing.sass
+++ b/sass/pricing.sass
@@ -91,8 +91,8 @@
             justify-content: space-around
             &__tier
                 width: 23%
-                padding-right: 0
-                padding-bottom: 5.062rem
+                padding-right: unset
+                padding-bottom: unset
                 &__left-side
                     display: block
                     margin-left: 50%
@@ -104,9 +104,7 @@
                 &__list
                     text-align: center
                 &__button
-                    transform: translate(-50%, 100%)
-                    &--1
-                        left: 19%
-                    &--3
-                        left: 82%
+                    position: relative
+                    top: 1.5rem
+                        
          
